--- a/cv.html
+++ b/cv.html
@@ -200,11 +200,11 @@
                                         <path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" clip-rule="evenodd"></path>
                                     </svg>
                                     <span class="flex-1 w-0 ml-2 truncate">
-                          CV-Thomas-Drumont-2020.pdf
+                          CV-Maxence-Joly-2020.pdf
                         </span>
                                 </div>
                                 <div class="flex-shrink-0 ml-4">
-                                    <a href="img/CV_2019-2020.pdf" target="_nofollow" class="font-medium text-indigo-600 transition duration-150 ease-in-out hover:text-indigo-500">
+                                    <a href="CV.pdf" target="_nofollow" class="font-medium text-indigo-600 transition duration-150 ease-in-out hover:text-indigo-500">
                                         Télécharger
                                     </a>
                                 </div>
