--- a/cv.html
+++ b/cv.html
@@ -204,7 +204,7 @@
                         </span>
                                 </div>
                                 <div class="flex-shrink-0 ml-4">
-                                    <a href="CV.pdf" target="_nofollow" class="font-medium text-indigo-600 transition duration-150 ease-in-out hover:text-indigo-500">
+                                    <a href="cv.pdf" target="_nofollow" class="font-medium text-indigo-600 transition duration-150 ease-in-out hover:text-indigo-500">
                                         Télécharger
                                     </a>
                                 </div>
