--- a/projet.html
+++ b/projet.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -51,7 +51,60 @@
                 <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
 
             </div>
-        </div>
+
+
+
+            <div class="w-full max-w-sm mx-auto rounded-md shadow-md bg-white overflow-hidden relative">
+                <div class="flex items-end justify-end h-56 w-full bg-cover" style="background-image: url('img/freeads.png')">
+                    <button class="p-2 rounded-full bg-blue-600 text-white mx-5 -mb-4 hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
+                        <a href="https://github.com/maxouloulou83/freeads"
+                        target="_blank">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 12a2 2 0 100-4 2 2 0 000 4z"></path><path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"></path></svg>
+                        </a>
+                    </button>
+                </div>
+                <div class="px-5 py-3">
+                    <h3 class="text-gray-700 uppercase">freeads</h3>
+                    <span class="text-gray-500 mt-2">1 Week</span>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+            <!--<div class="relative z-50 mb-4 overflow-hidden transition-all ease-in-out bg-gray-100 rounded-lg shadow-md shadow-lg duration-600 md:mb-0 md:transform hover:w-full hover:-translate-y-1 hover:scale-102 hover:shadow-lg">
+                    <div class="grid grid-flow-col auto-cols-max px-3 pt-10 pb-5 md:px-5">
+                        <h1 class="text-4xl font-medium tracking-wider text-center text-gray-800 font-raleway">Projets</h1>
+                        <div class="cursor-pointer relative" style="width:600px; height:300px">
+                            <a href="https://github.com/maxouloulou83/freeads"
+                               target="_blank"
+                                class="foto w-full h-full object-cover"
+                                alt="description"><img src="img/freeads.png"></a>
+                        </div>
+                    </div>
+            </div>
+
+                    <div class="cursor-pointer relative" style="width:300px; height:300px">
+                        <img src=""
+                             class="foto w-full h-full object-cover"
+                             alt="description" />
+                    </div>
+
+                    <div class="cursor-pointer relative" style="width: 300px; height:300px">
+                        <img src=""
+                             class="foto w-full h-full object-cover"
+                             alt="description" />
+                    </div>
+                </div>-->
+
 
 </body>
 </html>
