--- a/cv.html
+++ b/cv.html
@@ -12,79 +12,82 @@
 
         <!-- grid background -->
         <div class="grid-background absolute inset-0 p-2 grid grid-cols-12 gap-2 transform -skew-y-12 scale-125">
-            <!-- row 1 -->
-            <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
-
-            <!-- row 2 -->
-            <div class="col-span-5 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-3 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-2 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
-
-            <!-- row 3 -->
-            <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-7 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-
-            <!-- row 4 -->
-            <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-6 bg-gray-300 rounded custom-pulse"></div>
-
-            <!-- row 5 -->
-            <div class="col-span-5 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
-
-            <!-- row 6 -->
-            <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-7 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-
-            <!-- row 6 -->
-            <div class="col-span-4 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-7 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
 
             <!-- row 1 -->
-            <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
+            <div class="col-span-2 bg-gray-300 rounded "></div>
+            <div class="col-span-5 bg-blue-500 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
+            <div class="col-span-4 bg-gray-300 rounded "></div>
 
             <!-- row 2 -->
-            <div class="col-span-5 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-3 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-2 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
+            <div class="col-span-5 bg-gray-400 rounded "></div>
+            <div class="col-span-3 bg-blue-300 rounded "></div>
+            <div class="col-span-2 bg-gray-300 rounded "></div>
+            <div class="col-span-2 bg-gray-300 rounded "></div>
 
             <!-- row 3 -->
-            <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-7 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+            <div class="col-span-4 bg-gray-300 rounded "></div>
+            <div class="col-span-7 bg-gray-500 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
 
             <!-- row 4 -->
-            <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-6 bg-gray-300 rounded custom-pulse"></div>
+            <div class="col-span-2 bg-gray-400 rounded "></div>
+            <div class="col-span-4 bg-blue-300 rounded "></div>
+            <div class="col-span-6 bg-gray-300 rounded "></div>
 
             <!-- row 5 -->
-            <div class="col-span-5 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
+            <div class="col-span-5 bg-gray-300 rounded "></div>
+            <div class="col-span-5 bg-blue-400 rounded "></div>
+            <div class="col-span-2 bg-gray-400 rounded "></div>
 
             <!-- row 6 -->
-            <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-            <div class="col-span-7 bg-gray-300 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+            <div class="col-span-4 bg-blue-500 rounded "></div>
+            <div class="col-span-7 bg-gray-300 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
 
             <!-- row 6 -->
-            <div class="col-span-4 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-7 bg-gray-400 rounded custom-pulse"></div>
-            <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+            <div class="col-span-4 bg-gray-400 rounded "></div>
+            <div class="col-span-7 bg-blue-400 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
+
+            <div class="col-span-2 bg-gray-300 rounded "></div>
+            <div class="col-span-5 bg-blue-500 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
+            <div class="col-span-4 bg-gray-300 rounded "></div>
+
+            <!-- row 2 -->
+            <div class="col-span-5 bg-gray-400 rounded "></div>
+            <div class="col-span-3 bg-blue-300 rounded "></div>
+            <div class="col-span-2 bg-gray-300 rounded "></div>
+            <div class="col-span-2 bg-gray-300 rounded "></div>
+
+            <!-- row 3 -->
+            <div class="col-span-4 bg-gray-300 rounded "></div>
+            <div class="col-span-7 bg-gray-500 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
+
+            <!-- row 4 -->
+            <div class="col-span-2 bg-gray-400 rounded "></div>
+            <div class="col-span-4 bg-blue-300 rounded "></div>
+            <div class="col-span-6 bg-gray-300 rounded "></div>
+
+            <!-- row 5 -->
+            <div class="col-span-5 bg-gray-300 rounded "></div>
+            <div class="col-span-5 bg-blue-400 rounded "></div>
+            <div class="col-span-2 bg-gray-400 rounded "></div>
+
+            <!-- row 6 -->
+            <div class="col-span-4 bg-blue-500 rounded "></div>
+            <div class="col-span-7 bg-gray-300 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
+
+            <!-- row 6 -->
+            <div class="col-span-4 bg-gray-400 rounded "></div>
+            <div class="col-span-7 bg-blue-400 rounded "></div>
+            <div class="col-span-1 bg-gray-400 rounded "></div>
+
+
+
         </div>
         <div class="relative z-50 mb-4 overflow-hidden transition-all ease-in-out bg-gray-100 rounded-lg shadow-md shadow-lg duration-600 md:mb-0 md:transform hover:w-full hover:-translate-y-1 hover:scale-102 hover:shadow-lg">
             <div class="px-3 pt-10 pb-5 md:px-5">
@@ -105,7 +108,7 @@
                                             <div class="flex items-center text-sm leading-5 text-gray-600">
                                                 <i class="flex-shrink-0 mr-2 text-xl text-gray-500 far fa-calendar-week" :class="{ 'fas': hover === true }"></i>
                                                 <span>
-                                                    OCT. 2018 – Sept 2020
+                                                    Oct. 2018 – Sept. 2020
                                                   </span>
                                             </div>
                                         </div>
@@ -118,16 +121,16 @@
                                 <div class="flex-1 min-w-0 sm:flex sm:items-center sm:justify-between">
                                     <div>
                                         <div class="text-sm font-medium leading-5 text-indigo-600 truncate">
-                                            adjoin club
+                                            Adjoint club
                                             <span class="ml-1 font-normal text-gray-600">
-                                              salarié
+                                              Salarié
                                             </span>
                                         </div>
                                         <div class="flex mt-2">
                                             <div class="flex items-center text-sm leading-5 text-gray-600">
                                                 <i class="flex-shrink-0 mr-2 text-xl text-gray-500 far fa-calendar-week" :class="{ 'fas': hover === true }"></i>
                                                 <span>
-                                Janv. 2019 – Fév. 2019
+                                Jan. 2019 – Fév. 2019
                               </span>
                                             </div>
                                         </div>
@@ -218,7 +221,7 @@
                             <img class="w-10 h-10 mx-auto rounded-full" src="img/moiman1.png" alt="Photo de profil">
                         </div>
                         <div class="mt-3 text-center md:mt-0 md:ml-4 md:flex md:items-center">
-                            <div class="text-base font-medium leading-6 text-gray-900">maxence Joly
+                            <div class="text-base font-medium leading-6 text-gray-900">Maxence Joly
                             </div>
                             <div class="text-base font-medium leading-6 text-gray-500 font-raleway">
                             </div>
