--- a/a_propos.html
+++ b/a_propos.html
@@ -14,41 +14,79 @@
             <div class="grid-background absolute inset-0 p-2 grid grid-cols-12 gap-2 transform -skew-y-12 scale-125">
 
                 <!-- row 1 -->
-                <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
 
                 <!-- row 2 -->
-                <div class="col-span-5 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-3 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-5 bg-gray-400 rounded "></div>
+                <div class="col-span-3 bg-blue-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
 
                 <!-- row 3 -->
-                <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+                <div class="col-span-7 bg-gray-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
 
                 <!-- row 4 -->
-                <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-6 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-blue-300 rounded "></div>
+                <div class="col-span-6 bg-gray-300 rounded "></div>
 
                 <!-- row 5 -->
-                <div class="col-span-5 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-5 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-400 rounded "></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
 
                 <!-- row 6 -->
-                <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-blue-500 rounded "></div>
+                <div class="col-span-7 bg-gray-300 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
 
-                <!-- row 7 -->
-                <div class="col-span-4 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <!-- row 6 -->
+                <div class="col-span-4 bg-gray-400 rounded "></div>
+                <div class="col-span-7 bg-blue-400 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+
+                <!-- row 2 -->
+                <div class="col-span-5 bg-gray-400 rounded "></div>
+                <div class="col-span-3 bg-blue-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+
+                <!-- row 3 -->
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+                <div class="col-span-7 bg-gray-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <!-- row 4 -->
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-blue-300 rounded "></div>
+                <div class="col-span-6 bg-gray-300 rounded "></div>
+
+                <!-- row 5 -->
+                <div class="col-span-5 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-400 rounded "></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+
+                <!-- row 6 -->
+                <div class="col-span-4 bg-blue-500 rounded "></div>
+                <div class="col-span-7 bg-gray-300 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <!-- row 6 -->
+                <div class="col-span-4 bg-gray-400 rounded "></div>
+                <div class="col-span-7 bg-blue-400 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+
 
             </div>
 
@@ -59,7 +97,7 @@
                     <blockquote class="mt-8">
                         <div class="max-w-3xl mx-auto text-xl font-medium leading-8 text-gray-900 font-raleway">
                             <p>
-                                Je m'appelle maxence, j'ai 23 ans
+                                Je m'appelle Maxence, j'ai 23 ans.
                             </p>
                             <p class="mt-2">
                                 Je suis actuellement en formation de développeur / intégrateur à la
@@ -72,7 +110,7 @@
                                 Je suis un grand passionné d'informatique hardware et software mais surtout de développement web.
                             </p>
                             <p class="mt-2">
-                                Dans ce portfolio que j'ai réalisé, je vais vous présenter mes compétences, mon parcours ainsi que mes principaux projets réalisés en formation.
+                                Dans ce portfolio que j'ai réalisé, je vous présente mes compétences, mon parcours ainsi que mes principaux projets réalisés en formation.
                             </p>
                         </div>
                         <footer class="mt-8">
