--- a/plus.html
+++ b/plus.html
@@ -18,41 +18,79 @@
             <div class="grid-background absolute inset-0 p-2 grid grid-cols-12 gap-2 transform -skew-y-12 scale-125">
 
                 <!-- row 1 -->
-                <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
 
                 <!-- row 2 -->
-                <div class="col-span-5 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-3 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-5 bg-gray-400 rounded "></div>
+                <div class="col-span-3 bg-blue-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
 
                 <!-- row 3 -->
-                <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+                <div class="col-span-7 bg-gray-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
 
                 <!-- row 4 -->
-                <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-6 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-blue-300 rounded "></div>
+                <div class="col-span-6 bg-gray-300 rounded "></div>
 
                 <!-- row 5 -->
-                <div class="col-span-5 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-5 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-400 rounded "></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
 
                 <!-- row 6 -->
-                <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-blue-500 rounded "></div>
+                <div class="col-span-7 bg-gray-300 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
 
                 <!-- row 6 -->
-                <div class="col-span-4 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-gray-400 rounded "></div>
+                <div class="col-span-7 bg-blue-400 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+
+                <!-- row 2 -->
+                <div class="col-span-5 bg-gray-400 rounded "></div>
+                <div class="col-span-3 bg-blue-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+
+                <!-- row 3 -->
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+                <div class="col-span-7 bg-gray-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <!-- row 4 -->
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-blue-300 rounded "></div>
+                <div class="col-span-6 bg-gray-300 rounded "></div>
+
+                <!-- row 5 -->
+                <div class="col-span-5 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-400 rounded "></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+
+                <!-- row 6 -->
+                <div class="col-span-4 bg-blue-500 rounded "></div>
+                <div class="col-span-7 bg-gray-300 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <!-- row 6 -->
+                <div class="col-span-4 bg-gray-400 rounded "></div>
+                <div class="col-span-7 bg-blue-400 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+
 
             </div>
             
