--- a/projet.html
+++ b/projet.html
@@ -14,47 +14,85 @@
             <div class="grid-background absolute inset-0 p-2 grid grid-cols-12 gap-2 transform -skew-y-12 scale-125">
 
                 <!-- row 1 -->
-                <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
 
                 <!-- row 2 -->
-                <div class="col-span-5 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-3 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-5 bg-gray-400 rounded "></div>
+                <div class="col-span-3 bg-blue-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
 
                 <!-- row 3 -->
-                <div class="col-span-4 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+                <div class="col-span-7 bg-gray-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
 
                 <!-- row 4 -->
-                <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-6 bg-gray-300 rounded custom-pulse"></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-blue-300 rounded "></div>
+                <div class="col-span-6 bg-gray-300 rounded "></div>
 
                 <!-- row 5 -->
-                <div class="col-span-5 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-5 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-2 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-5 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-400 rounded "></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
 
                 <!-- row 6 -->
-                <div class="col-span-4 bg-gray-500 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-300 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-blue-500 rounded "></div>
+                <div class="col-span-7 bg-gray-300 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
 
                 <!-- row 6 -->
-                <div class="col-span-4 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-7 bg-gray-400 rounded custom-pulse"></div>
-                <div class="col-span-1 bg-gray-400 rounded custom-pulse"></div>
+                <div class="col-span-4 bg-gray-400 rounded "></div>
+                <div class="col-span-7 bg-blue-400 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+
+                <!-- row 2 -->
+                <div class="col-span-5 bg-gray-400 rounded "></div>
+                <div class="col-span-3 bg-blue-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+                <div class="col-span-2 bg-gray-300 rounded "></div>
+
+                <!-- row 3 -->
+                <div class="col-span-4 bg-gray-300 rounded "></div>
+                <div class="col-span-7 bg-gray-500 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <!-- row 4 -->
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+                <div class="col-span-4 bg-blue-300 rounded "></div>
+                <div class="col-span-6 bg-gray-300 rounded "></div>
+
+                <!-- row 5 -->
+                <div class="col-span-5 bg-gray-300 rounded "></div>
+                <div class="col-span-5 bg-blue-400 rounded "></div>
+                <div class="col-span-2 bg-gray-400 rounded "></div>
+
+                <!-- row 6 -->
+                <div class="col-span-4 bg-blue-500 rounded "></div>
+                <div class="col-span-7 bg-gray-300 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+                <!-- row 6 -->
+                <div class="col-span-4 bg-gray-400 rounded "></div>
+                <div class="col-span-7 bg-blue-400 rounded "></div>
+                <div class="col-span-1 bg-gray-400 rounded "></div>
+
+
 
             </div>
 
 
 
-            <div class="w-full max-w-sm mx-auto rounded-md shadow-md bg-white overflow-hidden relative">
+            <div class="w-full max-w-sm mx-auto rounded-md shadow-md bg-white overflow-hidden relative transition-all ease-in-out duration-600 md:mb-0 md:transform hover:w-full hover:-translate-y-1 hover:scale-102 hover:shadow-lg">
                 <div class="flex items-end justify-end h-56 w-full bg-cover" style="background-image: url('img/freeads.png')">
                     <button class="p-2 rounded-full bg-blue-600 text-white mx-5 -mb-4 hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
                         <a href="https://github.com/maxouloulou83/freeads"
@@ -67,6 +105,7 @@
                     <h3 class="text-gray-700 uppercase">freeads</h3>
                     <span class="text-gray-500 mt-2">1 Week</span>
                 </div>
+
             </div>
 
 
