--- a/bpjeps.html
+++ b/bpjeps.html
@@ -1,115 +1,137 @@
-<html xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <title>Maxence Joly - Portfolio</title>
+    <title>BPjeps</title>
 </head>
 <body>
-<div class="relative h-screen flex items-center justify-center bg-gray-600 overflow-hidden">
+<div class="relative h-full flex p-5 justify-center bg-gray-600 overflow-hidden">
+
+    <!-- grid background -->
     <div class="grid-background absolute inset-0 p-2 grid grid-cols-12 gap-2 transform -skew-y-12 scale-125">
+
         <!-- row 1 -->
         <div class="col-span-2 bg-gray-300 rounded "></div>
         <div class="col-span-5 bg-blue-500 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
         <div class="col-span-4 bg-gray-300 rounded "></div>
+
         <!-- row 2 -->
         <div class="col-span-5 bg-gray-400 rounded "></div>
         <div class="col-span-3 bg-blue-300 rounded "></div>
         <div class="col-span-2 bg-gray-300 rounded "></div>
         <div class="col-span-2 bg-gray-300 rounded "></div>
+
         <!-- row 3 -->
         <div class="col-span-4 bg-gray-300 rounded "></div>
         <div class="col-span-7 bg-gray-500 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
+
         <!-- row 4 -->
         <div class="col-span-2 bg-gray-400 rounded "></div>
         <div class="col-span-4 bg-blue-300 rounded "></div>
         <div class="col-span-6 bg-gray-300 rounded "></div>
+
         <!-- row 5 -->
         <div class="col-span-5 bg-gray-300 rounded "></div>
         <div class="col-span-5 bg-blue-400 rounded "></div>
         <div class="col-span-2 bg-gray-400 rounded "></div>
+
         <!-- row 6 -->
         <div class="col-span-4 bg-blue-500 rounded "></div>
         <div class="col-span-7 bg-gray-300 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
+
         <!-- row 6 -->
         <div class="col-span-4 bg-gray-400 rounded "></div>
         <div class="col-span-7 bg-blue-400 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
+
         <div class="col-span-2 bg-gray-300 rounded "></div>
         <div class="col-span-5 bg-blue-500 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
         <div class="col-span-4 bg-gray-300 rounded "></div>
+
         <!-- row 2 -->
         <div class="col-span-5 bg-gray-400 rounded "></div>
         <div class="col-span-3 bg-blue-300 rounded "></div>
         <div class="col-span-2 bg-gray-300 rounded "></div>
         <div class="col-span-2 bg-gray-300 rounded "></div>
+
         <!-- row 3 -->
         <div class="col-span-4 bg-gray-300 rounded "></div>
         <div class="col-span-7 bg-gray-500 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
+
         <!-- row 4 -->
         <div class="col-span-2 bg-gray-400 rounded "></div>
         <div class="col-span-4 bg-blue-300 rounded "></div>
         <div class="col-span-6 bg-gray-300 rounded "></div>
+
         <!-- row 5 -->
         <div class="col-span-5 bg-gray-300 rounded "></div>
         <div class="col-span-5 bg-blue-400 rounded "></div>
         <div class="col-span-2 bg-gray-400 rounded "></div>
+
         <!-- row 6 -->
         <div class="col-span-4 bg-blue-500 rounded "></div>
         <div class="col-span-7 bg-gray-300 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
+
         <!-- row 6 -->
         <div class="col-span-4 bg-gray-400 rounded "></div>
         <div class="col-span-7 bg-blue-400 rounded "></div>
         <div class="col-span-1 bg-gray-400 rounded "></div>
+
+
+
     </div>
-        <div class="flex justify-center w-full">
-            <!--            freeads-->
-            <div class="w-full max-w-sm mx-auto rounded-md shadow-md bg-white overflow-hidden relative transition-all ease-in-out duration-600 md:mb-0 md:transform hover:w-full hover:-translate-y-1 hover:scale-102 hover:shadow-lg">
-                <div class="flex items-end justify-end h-56 w-full bg-cover" style="background-image: url('img/freeads.png')">
-                    <button class="p-2 rounded-full bg-blue-600 text-white mx-5 -mb-4 hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
-                        <a href="https://github.com/maxouloulou83/freeads"
-                           target="_blank">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M10 12a2 2 0 100-4 2 2 0 000 4z"></path>
-                                <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"></path>
-                            </svg>
-                        </a>
-                    </button>
+
+    <div class="relative z-50 mb-4 overflow-hidden transition-all ease-in-out bg-gray-100 rounded-lg shadow-lg duration-600 md:mb-0 md:transform hover:w-full hover:-translate-y-1 hover:scale-102 hover:shadow-lg">
+        <div class="px-3 pt-10 pb-5 md:px-5">
+            <h1 class="text-4xl font-medium tracking-wider text-center text-gray-800 font-raleway">BPjeps APT</h1>
+            <blockquote class="mt-8">
+                <div class="max-w-3xl mx-auto text-xl font-medium leading-8 text-gray-900 font-raleway">
+                    <p class="italic">
+                        BPJEPS Spécialité Educateur Sportif mention Activités Physiques pour Tous
+                    </p><br>
+                    <p class="text-2xl text-center">Objectifs de cette formation</p><br>
+                    <ul class="">
+                        <li>
+                            Acquérir les compétences d’animation
+                        </li>
+                        <li>
+                            Améliorer les aptitudes à animer
+                        </li>
+                        <li>
+                            Connaître le secteur professionnel de l’animation et des publics
+                        </li>
+                        <li>
+                            Accélérer l’insertion dans la vie professionnelle
+                        </li>
+                        <li>
+                            Développer des compétences en APT
+                        </li>
+                        <li>
+                            Répondre aux besoins APT
+                        </li>
+                    </ul>
+
+
+
+
+
+
+
+
+
                 </div>
-                <div class="px-5 py-3">
-                    <h3 class="text-gray-700 uppercase">freeads</h3>
-                    <span class="text-gray-500 mt-2">1 Week</span>
-                </div>
-            </div>
-            <!--            my_quizz-->
-            <div class="w-full max-w-sm mx-auto rounded-md shadow-md bg-white overflow-hidden relative transition-all ease-in-out duration-600 md:mb-0 md:transform hover:w-full hover:-translate-y-1 hover:scale-102 hover:shadow-lg">
-                <div class="flex items-end justify-end h-56 w-full bg-cover" style="background-image: url('img/quizz.png')">
-                    <button class="p-2 rounded-full bg-blue-600 text-white mx-5 -mb-4 hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
-                        <a href="https://github.com/maxouloulou83/my_quizz"
-                           target="_blank">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M10 12a2 2 0 100-4 2 2 0 000 4z"></path>
-                                <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"></path>
-                            </svg>
-                        </a>
-                    </button>
-                </div>
-                <div class="px-5 py-3">
-                    <h3 class="text-gray-700 uppercase">My quizz</h3>
-                    <span class="text-gray-500 mt-2">duo / 2 weeks</span>
-                </div>
-            </div>
-        </div>
+
 
 </div>
+
 </body>
 </html>
