--- a/cv.html
+++ b/cv.html
@@ -94,29 +94,33 @@
                 <h1 class="text-4xl font-medium tracking-wider text-center text-gray-800 font-raleway">Formations</h1>
                 <div class="grid grid-cols-1 gap-4 my-5 md:grid-cols-2">
                     <div>
-                        <div class="block transition duration-150 ease-in-out rounded bg-gray-50 hover:bg-gray-100 focus:outline-none focus:bg-gray-50" x-data="{ hover: false }" @mouseenter="hover = true" @mouseleave="hover = false">
-                            <div class="flex items-center px-4 py-4 sm:px-6">
-                                <div class="flex-1 min-w-0 sm:flex sm:items-center sm:justify-between">
-                                    <div>
-                                        <div class="text-sm font-medium leading-5 text-indigo-600 truncate">
-                                            BPJEPS - APT
-                                            <span class="ml-1 font-normal text-gray-600">
-                                              Alternance
-                                            </span>
-                                        </div>
-                                        <div class="flex mt-2">
-                                            <div class="flex items-center text-sm leading-5 text-gray-600">
-                                                <i class="flex-shrink-0 mr-2 text-xl text-gray-500 far fa-calendar-week" :class="{ 'fas': hover === true }"></i>
-                                                <span>
-                                                    Oct. 2018 – Sept. 2020
-                                                  </span>
+                        <a href="bpjeps.html">
+                            <div class="block transition duration-150 ease-in-out rounded bg-gray-50 hover:bg-gray-100 focus:outline-none focus:bg-gray-50" x-data="{ hover: false }" @mouseenter="hover = true" @mouseleave="hover = false">
+
+                                <div class="flex items-center px-4 py-4 sm:px-6">
+                                    <div class="flex-1 min-w-0 sm:flex sm:items-center sm:justify-between">
+                                        <div>
+                                            <div class="text-sm font-medium leading-5 text-indigo-600 truncate">
+                                                BPJEPS - APT
+                                                <span class="ml-1 font-normal text-gray-600">
+                                                  Alternance
+                                                </span>
+                                            </div>
+                                            <div class="flex mt-2">
+                                                <div class="flex items-center text-sm leading-5 text-gray-600">
+                                                    <i class="flex-shrink-0 mr-2 text-xl text-gray-500 far fa-calendar-week" :class="{ 'fas': hover === true }"></i>
+                                                    <span>
+                                                        Oct. 2018 – Sept. 2020
+                                                      </span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                         <div class="block mt-4 transition duration-150 ease-in-out rounded bg-gray-50 hover:bg-gray-100 focus:outline-none focus:bg-gray-50" x-data="{ hover: false }" @mouseenter="hover = true" @mouseleave="hover = false">
+                            <a href="adjoint.html">
                             <div class="flex items-center px-4 py-4 sm:px-6">
                                 <div class="flex-1 min-w-0 sm:flex sm:items-center sm:justify-between">
                                     <div>
@@ -138,9 +142,11 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div>
                         <div class="block transition duration-150 ease-in-out rounded bg-gray-50 hover:bg-gray-100 focus:outline-none focus:bg-gray-50" x-data="{ hover: false }" @mouseenter="hover = true" @mouseleave="hover = false">
+                            <a href="CAP.html">
                             <div class="flex items-center px-4 py-4 sm:px-6">
                                 <div class="flex-1 min-w-0 sm:flex sm:items-center sm:justify-between">
                                     <div>
@@ -162,7 +168,9 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                         <div class="block mt-4 transition duration-150 ease-in-out rounded bg-gray-50 hover:bg-gray-100 focus:outline-none focus:bg-gray-50" x-data="{ hover: false }" @mouseenter="hover = true" @mouseleave="hover = false">
+                            <a href="newteon.html">
                             <div class="flex items-center px-4 py-4 sm:px-6">
                                 <div class="flex-1 min-w-0 sm:flex sm:items-center sm:justify-between">
                                     <div>
@@ -184,6 +192,7 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
                 <div class="px-3 pt-10 pb-5 md:px-5">
